I added a buho ...xd

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/png" href="/src/logoHead.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="En esta web app vas a poder calcular tus promedios a base de porcentajes">
     <title>Calcula tu promedio</title>
