I fixed Owl image ...xd

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="En esta web app vas a poder calcular tus promedios a base de porcentajes">
     <title>Calcula tu promedio</title>
   </head>
-  <body class="bg-[#FFFEFC] text-[#212121] dark:bg-[#212121] dark:text-[#FFFEFC]">
+  <body class="bg-[#FFFEFC] text-[#212121] dark:bg-[#212121] dark:text-[#FFFEFC] overflow-x-hidden	">
     <div id="root" class="w-[87%] h-screen mx-auto"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
