I've refactored the code a little bit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body class="bg-[#FFFEFC] text-[#212121] dark:bg-[#212121] dark:text-[#FFFEFC] overflow-x-hidden	">
     <div id="root" class="w-[87%] h-screen mx-auto"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
