Migrate to Rsbuild

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="es" class="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logoHead.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="En esta web app vas a poder calcular tus promedios a base de porcentajes">
-    <title>Calcula tu promedio</title>
-  </head>
-  <body class="bg-[#FFFEFC] text-[#212121] dark:bg-[#212121] dark:text-[#FFFEFC] overflow-x-hidden	">
-    <div id="root" class="w-[87%] h-screen mx-auto"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+</head>
+
+<body class="bg-[#FFFEFC] text-[#212121] dark:bg-[#212121] dark:text-[#FFFEFC] overflow-x-hidden	">
+  <div id="<%= mountId %>" class="w-[87%] h-screen mx-auto"></div>
+</body>
+
 </html>
