--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 
-<body class="bg-[#FFFEFC] text-[#212121] dark:bg-[#212121] dark:text-[#FFFEFC] overflow-x-hidden	">
+<body>
   <div id="<%= mountId %>" class="w-[87%] h-screen mx-auto"></div>
 </body>
 
