fix: remove h-screen class

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <div id="<%= mountId %>" class="w-[87%] h-screen mx-auto"></div>
+  <div id="<%= mountId %>" class="container lg:w-[87%] mx-auto"></div>
 </body>
 
 </html>
