Refactor container width in index.html for responsiveness

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <div id="<%= mountId %>" class="container lg:w-[87%] mx-auto"></div>
+  <div id="<%= mountId %>" class="px-6 w-full lg:w-[87%] mx-auto"></div>
 </body>
 
 </html>
