Add Open Graph meta tags for improved social sharing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="es" class="dark">
 
 <head>
+  <meta property="og:type" content="website">
+  <meta property="og:title"
+    content="Campromedio - Calcula tu promedio ponderado en la Universidad Nacional de Moquegua">
+  <meta property="og:description"
+    content="Simplifica el cálculo de tu promedio ponderado con Campromedio. Ideal para estudiantes de la Universidad Nacional de Moquegua.">
+  <meta property="og:url" content="https://campromedio.netlify.app">
+  <meta property="og:image" content="/portada.png">
+  <meta property="og:image:alt" content="Calculadora de promedio ponderado para estudiantes de la UNAM">
+  <meta property="og:locale" content="es_PE">
 </head>
 
 <body>
