Update Open Graph title for clarity on course context

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta property="og:type" content="website">
   <meta property="og:title"
-    content="Campromedio - Calcula tu promedio ponderado en la Universidad Nacional de Moquegua">
+    content="Campromedio - Calcula tu promedio ponderado de un curso de la Universidad Nacional de Moquegua">
   <meta property="og:description"
     content="Simplifica el cálculo de tu promedio ponderado con Campromedio. Ideal para estudiantes de la Universidad Nacional de Moquegua.">
   <meta property="og:url" content="https://campromedio.netlify.app">
